# qt

./: .dockerignore  .gitignore  .trivyignore  Dockerfile  README.md  docker-compose.yml
.claude/: launch.json
.github/: dependabot.yml
backend/: pyproject.toml
backend/qt/: db.py  main.py  models.py  security.py  settings_service.py
backend/qt/alembic/: env.py
backend/qt/alembic/versions/: 0001_baseline.py  0002_phase2_engine.py  0003_assets.py  0004_baskets.py  0005_strategy_custom_symbols.py
backend/qt/api/: about.py  assets.py  auth.py  backtest.py  baskets.py  deps.py  engine.py  market.py  status.py  strategies.py
backend/qt/broker/: alpaca.py  factory.py
backend/qt/services/: assets.py  backtest.py  backup.py  buildinfo.py  calendar.py  engine.py  execution.py  jobs.py  lifecycle.py  notify.py  persistence.py  presets.py  ranking.py  reconcile.py  regime.py  scanner.py  scoreboard.py  starter_baskets.py  stats.py  watchdog.py
backend/tests/: conftest.py  test_about.py  test_api.py  test_assets.py  test_auth.py  test_backtest.py  test_backtest_api.py  test_backup.py  test_basket_engine.py  test_baskets.py  test_calendar.py  test_engine_api.py  test_engine_rules.py  test_execution.py  test_market_api.py  test_migrations.py  test_persistence.py  test_ranking.py  test_reconcile.py  test_scanner.py  test_security.py  test_shadow_integration.py  test_stats.py  test_strategies_api.py  test_watchdog_shutdown.py  test_watchlist_stats.py
docs/: CHANGELOG.md  data-persistence.md  decisions.md  how-it-works.md  roadmap.md
frontend/: index.html  package.json  (+3 more)
(+24 files in other folders)
