[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qt-server"
version = "0.1.0"
description = "QT — self-hosted momentum auto-trader (Alpaca, paper-first)"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "cryptography>=43.0",
    "httpx>=0.27",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
include = ["qt*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
